# ROS2-Quadruped-Robot

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/bwt901cl_pkg/share/bwt901cl_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/bwt901cl_pkg/: setup.py
src/bwt901cl_pkg/bwt901cl_pkg/: imu_bwt901cl.py  tf_broadcaster.py
src/inverse_kinematics/: package.xml  setup.py
src/inverse_kinematics/inverse_kinematics/: simple_ik_publisher.py
src/localization_ekf/: package.xml  setup.cfg  setup.py
src/localization_ekf/config/: ekf_config.yaml
src/localization_ekf/launch/: launch_ekf.py
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  spot_v1.srdf  spot_v1.urdf.xacro
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_config_spot/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config_spot/config/: kinematics.yaml  spot_v1.ros2_control.xacro  spot_v1.srdf  spot_v1.urdf.xacro
src/moveit_config_spot/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  (+1 more)
src/odometry/: package.xml  setup.py
src/servo_controller/: setup.py
src/spot_v1_description/: setup.cfg  setup.py
(+46 files in other folders)
