<?xml version="1.0"?>
<package format="2">
  <name>bwt901cl_pkg</name>
  <version>0.0.0</version>
  <description>Package for using sensor module BWT901CL</description>
  <maintainer email="dorebom.b@gmail.com">dorebom</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf_conversions</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>